feat: add store-mvp extension (local-only, no backend)
- Rename to 'PromptFence (Personal)' for personal use
- Remove backend dependencies (no install code, no API)
- Add presets: Personal, Finance, Health, Workplace, Developer
- Add new detection: credit cards (Luhn), addresses, passwords/API keys
- Add privacy policy and store listing docs
- All detection runs locally, no data leaves browser
- Add package-extension-store.sh script

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "PromptFence",
+  "name": "PromptFence (Personal)",
   "version": "1.0.0",
-  "description": "Blocks pasting of sensitive data (emails, phones, IBANs) into AI chat prompts",
+  "description": "Protects your sensitive data from being pasted into AI chat prompts. Detects emails, phones, IBANs, credit cards, and more.",
   "permissions": [
     "storage"
   ],
@@ -10,11 +10,7 @@
     "https://chat.openai.com/*",
     "https://chatgpt.com/*",
     "https://claude.ai/*",
-    "https://gemini.google.com/*",
-    "http://localhost:3000/*",
-    "http://localhost:*/*",
-    "http://127.0.0.1:*/*",
-    "https://*/*"
+    "https://gemini.google.com/*"
   ],
   "content_scripts": [
     {
